// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Booking Form Confirmation matches its snapshot 1`] = `
<DocumentFragment>
  <form
    class="bookingForm"
  >
    <div
      class="currentStep"
    >
      <div>
        <h2>
          Thank you uniart
        </h2>
        <h3
          data-thin="true"
        >
          Keaton Keeling will receive an email confirmation of the booking
        </h3>
        <div
          class="outputs"
        >
          <div
            class="card"
            data-testid="carpark-card"
          >
            <div
              class="topHalf"
            >
              <h3>
                repudiandae
              </h3>
            </div>
            <div
              class="bottomHalf"
            >
              <div
                class="description"
              >
                <p>
                  esse blanditiis natus
                </p>
              </div>
              <div
                class="directions"
              >
                <svg
                  fill="none"
                  height="24"
                  id="map-pin"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
                    fill="#231F20"
                  />
                </svg>
                <a
                  class="p-small-bold"
                  href="http://brooklyn.org"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Get directions
                  <svg
                    fill="none"
                    height="24"
                    id="open-in-new"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      fill="#323232"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <label
              class="p-bold"
              for="date"
            >
              Date
            </label>
            <input
              data-testid="date"
              name="date"
              type="data"
              value="Tue Jun 16 2015"
            />
          </div>
          <table
            class="bayTimes"
          >
            <thead>
              <tr>
                <th>
                  Bay
                </th>
                <th>
                  Time
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  41702
                </td>
                <td>
                  08:00-08:30
                </td>
              </tr>
              <tr>
                <td>
                  41702
                </td>
                <td>
                  09:00-09:30
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Booking Form Step 1 matches its snapshot 1`] = `
<DocumentFragment>
  <form
    class="bookingForm"
  >
    <div
      class="currentStep"
    >
      <div
        class="carpark"
        data-loading="false"
        data-testid="carpark-step"
      >
        <h2>
          UniPark VIP Booking
        </h2>
        <h3>
          Please pick a car park
        </h3>
        <p>
          Any additional enquiries, call 
          <a
            href=""
          >
            04 1234 5678
          </a>
        </p>
        <div
          class="cards"
          data-testid="carpark-cards"
        >
          <div
            class="card"
            data-testid="carpark-card"
          >
            <div
              class="topHalf"
            >
              <h3>
                repudiandae
              </h3>
            </div>
            <div
              class="bottomHalf"
            >
              <div
                class="description"
              >
                <p>
                  esse blanditiis natus
                </p>
              </div>
              <div
                class="directions"
              >
                <svg
                  fill="none"
                  height="24"
                  id="map-pin"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
                    fill="#231F20"
                  />
                </svg>
                <a
                  class="p-small-bold"
                  href="http://brooklyn.org"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Get directions
                  <svg
                    fill="none"
                    height="24"
                    id="open-in-new"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      fill="#323232"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="card"
            data-testid="carpark-card"
          >
            <div
              class="topHalf"
            >
              <h3>
                nostrum
              </h3>
            </div>
            <div
              class="bottomHalf"
            >
              <div
                class="description"
              >
                <p>
                  ipsam qui nobis
                </p>
              </div>
              <div
                class="directions"
              >
                <svg
                  fill="none"
                  height="24"
                  id="map-pin"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
                    fill="#231F20"
                  />
                </svg>
                <a
                  class="p-small-bold"
                  href="https://roberta.info"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Get directions
                  <svg
                    fill="none"
                    height="24"
                    id="open-in-new"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      fill="#323232"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="card"
            data-testid="carpark-card"
          >
            <div
              class="topHalf"
            >
              <h3>
                ullam
              </h3>
            </div>
            <div
              class="bottomHalf"
            >
              <div
                class="description"
              >
                <p>
                  quos qui illo
                </p>
              </div>
              <div
                class="directions"
              >
                <svg
                  fill="none"
                  height="24"
                  id="map-pin"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
                    fill="#231F20"
                  />
                </svg>
                <a
                  class="p-small-bold"
                  href="https://kieran.name"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Get directions
                  <svg
                    fill="none"
                    height="24"
                    id="open-in-new"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      fill="#323232"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="card"
            data-testid="carpark-card"
          >
            <div
              class="topHalf"
            >
              <h3>
                saepe
              </h3>
            </div>
            <div
              class="bottomHalf"
            >
              <div
                class="description"
              >
                <p>
                  consequatur vel in
                </p>
              </div>
              <div
                class="directions"
              >
                <svg
                  fill="none"
                  height="24"
                  id="map-pin"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
                    fill="#231F20"
                  />
                </svg>
                <a
                  class="p-small-bold"
                  href="https://cassandra.name"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Get directions
                  <svg
                    fill="none"
                    height="24"
                    id="open-in-new"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      fill="#323232"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="card"
            data-testid="carpark-card"
          >
            <div
              class="topHalf"
            >
              <h3>
                veritatis
              </h3>
            </div>
            <div
              class="bottomHalf"
            >
              <div
                class="description"
              >
                <p>
                  qui ex culpa
                </p>
              </div>
              <div
                class="directions"
              >
                <svg
                  fill="none"
                  height="24"
                  id="map-pin"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
                    fill="#231F20"
                  />
                </svg>
                <a
                  class="p-small-bold"
                  href="https://hailee.info"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Get directions
                  <svg
                    fill="none"
                    height="24"
                    id="open-in-new"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      fill="#323232"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Booking Form Step 2 matches its snapshot 1`] = `
<DocumentFragment>
  <form
    class="bookingForm"
  >
    <div
      class="backButton"
    >
      <button
        class="custombutton iconLeft"
        type="button"
      >
         
        <svg
          data-rotate="true"
          height="24"
          id="arrow"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"
            fill="#231F20"
          />
        </svg>
         Back
      </button>
    </div>
    <div
      class="currentStep"
    >
      <div
        class="baysSelection"
      >
        <h2>
          Select bay for 
          <span
            class="blue"
          >
            repudiandae
          </span>
           on Tue Jun 16 2015
        </h2>
        <div
          class="legends"
        >
          <div
            class="legend"
          >
            <div
              class="greenSquare"
            />
            <p>
              Selected
            </p>
          </div>
          <div
            class="legend"
          >
            <div
              class="redSquare"
            />
            <p>
              Unavailable
            </p>
          </div>
          <div
            class="legend"
          >
            <div
              class="yellowSquare"
            />
            <p>
              Available
            </p>
          </div>
        </div>
        <div
          class="bayButtons"
        >
          <div
            class="bayButtonsLeft"
          >
            <div
              class="datePicker"
            >
              <svg
                fill="none"
                height="24"
                id="calender"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"
                  fill="#231F20"
                />
              </svg>
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    type="text"
                    value="16/06/2015"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="bayButtonsRight"
          >
            <button
              class="custombutton"
              type="button"
            >
              Reset 
              <svg
                fill="none"
                height="24"
                id="reset"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.65 6.35A7.958 7.958 0 0 0 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0 1 12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
                  fill="#323232"
                />
              </svg>
               
            </button>
            <button
              class="custombutton"
              type="submit"
            >
              Continue 
              <svg
                height="24"
                id="arrow"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"
                  fill="#231F20"
                />
              </svg>
               
            </button>
          </div>
        </div>
        <div
          class="table"
          data-testid="table"
        >
          <div
            class="top"
          >
            <div
              class="topLeft"
            >
              <p
                data-small-bold="true"
              >
                BAY
              </p>
            </div>
            <div
              class="times"
            >
              <p
                data-small-bold="true"
              >
                08:00
              </p>
              <p
                data-small-bold="true"
              >
                08:30
              </p>
              <p
                data-small-bold="true"
              >
                09:00
              </p>
              <p
                data-small-bold="true"
              >
                09:30
              </p>
              <p
                data-small-bold="true"
              >
                10:00
              </p>
              <p
                data-small-bold="true"
              >
                10:30
              </p>
              <p
                data-small-bold="true"
              >
                11:00
              </p>
              <p
                data-small-bold="true"
              >
                11:30
              </p>
              <p
                data-small-bold="true"
              >
                12:00
              </p>
              <p
                data-small-bold="true"
              >
                12:30
              </p>
              <p
                data-small-bold="true"
              >
                13:00
              </p>
              <p
                data-small-bold="true"
              >
                13:30
              </p>
              <p
                data-small-bold="true"
              >
                14:00
              </p>
              <p
                data-small-bold="true"
              >
                14:30
              </p>
              <p
                data-small-bold="true"
              >
                15:00
              </p>
              <p
                data-small-bold="true"
              >
                15:30
              </p>
              <p
                data-small-bold="true"
              >
                16:00
              </p>
              <p
                data-small-bold="true"
              >
                16:30
              </p>
              <p
                data-small-bold="true"
              >
                17:00
              </p>
              <p
                data-small-bold="true"
              >
                17:30
              </p>
              <p
                data-small-bold="true"
              >
                18:00
              </p>
              <p
                data-small-bold="true"
              >
                18:30
              </p>
              <p
                data-small-bold="true"
              >
                19:00
              </p>
              <p
                data-small-bold="true"
              >
                19:30
              </p>
              <p
                data-small-bold="true"
              >
                20:00
              </p>
            </div>
          </div>
          <div
            class="bays"
          >
            <div
              class="bay"
              data-light="false"
            >
              <div
                class="left"
              >
                <p>
                  41702
                </p>
              </div>
              <div
                class="bayTimes"
              >
                <button
                  class="bayTime"
                  data-selected="true"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
              </div>
            </div>
            <div
              class="bay"
              data-light="true"
            >
              <div
                class="left"
              >
                <p>
                  30233
                </p>
              </div>
              <div
                class="bayTimes"
              >
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
              </div>
            </div>
            <div
              class="bay"
              data-light="false"
            >
              <div
                class="left"
              >
                <p>
                  18626
                </p>
              </div>
              <div
                class="bayTimes"
              >
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
                <button
                  class="bayTime"
                  data-selected="false"
                  data-testid="bay-time"
                  data-unavailable="false"
                  type="button"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Booking Form Step 3 matches its snapshot 1`] = `
<DocumentFragment>
  <form
    class="bookingForm"
  >
    <div
      class="backButton"
    >
      <button
        class="custombutton iconLeft"
        type="button"
      >
         
        <svg
          data-rotate="true"
          height="24"
          id="arrow"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"
            fill="#231F20"
          />
        </svg>
         Back
      </button>
    </div>
    <div
      class="currentStep"
    >
      <div
        class="details"
      >
        <div
          class="detailsTop"
        >
          <h2>
            Booking Details
          </h2>
          <h3
            data-thin="true"
          >
            Please fill in details for the person that will be parking
          </h3>
        </div>
        <div
          class="detailsContent"
        >
          <div
            class="detailsLeft"
          >
            <div
              class="card"
              data-testid="carpark-card"
            >
              <div
                class="topHalf"
              >
                <h3>
                  repudiandae
                </h3>
              </div>
              <div
                class="bottomHalf"
              >
                <div
                  class="description"
                >
                  <p>
                    esse blanditiis natus
                  </p>
                </div>
                <div
                  class="directions"
                >
                  <svg
                    fill="none"
                    height="24"
                    id="map-pin"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
                      fill="#231F20"
                    />
                  </svg>
                  <a
                    class="p-small-bold"
                    href="http://brooklyn.org"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Get directions
                    <svg
                      fill="none"
                      height="24"
                      id="open-in-new"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                        fill="#323232"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <label
                class="p-bold"
                for="date"
              >
                Date
              </label>
              <input
                data-testid="date"
                name="date"
                type="data"
                value="Tue Jun 16 2015"
              />
            </div>
            <table
              class="bayTimes"
            >
              <thead>
                <tr>
                  <th>
                    Bay
                  </th>
                  <th>
                    Time
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    41702
                  </td>
                  <td>
                    08:00-08:30
                  </td>
                </tr>
                <tr>
                  <td>
                    41702
                  </td>
                  <td>
                    09:00-09:30
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="detailsRight"
          >
            <div
              class="field"
            >
              <label
                class="p-bold"
                for="firstName"
              >
                First Name
              </label>
              <input
                data-testid="firstName"
                name="firstName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="field"
            >
              <label
                class="p-bold"
                for="lastName"
              >
                Last Name
              </label>
              <input
                data-testid="lastName"
                name="lastName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="field"
            >
              <label
                class="p-bold"
                for="email"
              >
                Email
              </label>
              <input
                data-testid="email"
                name="email"
                required=""
                type="email"
                value=""
              />
            </div>
            <div
              class="field"
            >
              <label
                class="p-bold"
                for="phone"
              >
                Phone
              </label>
              <input
                data-testid="phone"
                name="phone"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="field"
            >
              <label
                class="p-bold"
                for="rego"
              >
                Rego (Optional)
              </label>
              <input
                data-testid="rego"
                name="rego"
                type="text"
                value=""
              />
            </div>
            <div
              class="field"
            >
              <label
                class="p-bold"
                for="company"
              >
                Company (Optional)
              </label>
              <input
                data-testid="company"
                name="company"
                type="text"
                value=""
              />
            </div>
            <button
              class="custombutton"
              type="submit"
            >
              Submit 
              <svg
                fill="none"
                height="24"
                id="done"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                  fill="#231F20"
                />
              </svg>
               
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
